<resources>
    <string name="app_name">Empta - Minha Lista de Compras</string>
    <string name="facebook_app_id">3040722109485771</string>
    <string name="fb_login_protocol_scheme">fb3040722109485771</string>
    <string name="title_activity_login">Entre</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Senha</string>
    <string name="action_sign_in">Entre ou Registre-se</string>
    <string name="action_sign_in_anonimo">Entre Anonimamente</string>
    <string name="action_sign_in_short">Entre</string>
    <string name="welcome">"Bem-Vindo!"</string>
    <string name="invalid_username">Esse não é um e-mail valido</string>
    <string name="invalid_password">A senha deve ter mais de 5 caracteres</string>
    <string name="login_failed">"Falha ao logar"</string>
    <string name="offline_msg">"Você está off-line, por favor conecte-se à internet."</string>
    <string name="login_efetuando">Efetuando Login</string>
    <string name="login_conectando_servidor">Conectando ao servidor</string>
    <string name="login_activity_falha_ao_auth">Falha ao autenticar, verifique a senha.</string>
    <string name="login_activity_falha_ao_criar_usuario">Falha ao criar usuário.</string>
    <string name="title_activity_tela_principal">Minha Lista de Compras</string>
    <string name="tv_progress_status_info_carregando">Carregando</string>
    <string name="menu_bottom_menu_item_despensa">Despensa</string>
    <string name="menu_bottom_menu_item_lista">Minhas Listas</string>
    <string name="menu_bottom_menu_item_buscar_lista">Procurar Lista Online</string>
    <string name="menu_bottom_menu_item_novo_item">Novo Item</string>
    <string name="menu_item_sobre">Sobre</string>
    <string name="menu_item_logout">Logout</string>
    <string name="menu_item_login">Login</string>
    <string name="menu_item_sair">Sair</string>
    <string name="fragment_lista_dialog_add_lista_titulo">Dê um nome para a sua nova lista</string>
    <string name="fragment_lista_dialog_add_lista_menssagem"> </string>
    <string name="fragment_lista_online_edbuscar_hint">Procurar uma lista online...</string>
    <string name="fragment_lista_online_btnbuscar_text">Buscar</string>
    <string name="dialog_add_lista_ednome_hint">Nome da sua lista...</string>
    <string name="dialog_add_lista_eddescricao_hint">Descrição...</string>
    <string name="dialog_add_lista_botao_criar_texto">Criar</string>
    <string name="rv_lista_de_compras_cv_tv_nome">Nome: </string>
    <string name="rv_lista_de_compras_cv_tv_descricao">Descrição: </string>
    <string name="rv_lista_de_compras_cv_tv_data_criacao">Data de Criação: </string>
    <string name="rv_lista_de_compras_cv_tv_criador">Criada Por: </string>
    <string name="rv_lista_de_compras_cv_btn_novo_item">Novo Item</string>
    <string name="rv_lista_de_compras_tv_itens_titulo">Minha Lista</string>
    <string name="rv_lista_de_compras_tv_itens_organizar_por">Organizar Por:</string>
    <string name="rv_lista_de_compras_cv_btn_iniciar_compras">Iniciar Compras</string>
    <string name="rv_lista_de_compras_cv_btn_pausar_compras">Pausar Compras</string>
    <string name="rv_lista_de_compras_itens_cv_tv_nome">Item: </string>
    <string name="rv_lista_de_compras_itens_cv_tv_quantidade">Quantidade: </string>
    <string name="rv_lista_de_compras_itens_cv_tv_descricao">Descrição: </string>
    <string name="rv_lista_de_compras_itens_cv_tv_preco">Preço... </string>
    <string name="rv_lista_de_compras_itens_cv_tv_categoria">Categoria: </string>
    <string name="rv_lista_de_compras_itens_cv_cb_concluido">Concluído! </string>
    <string name="dialog_novo_Item_editem_hint">Item...</string>
    <string name="dialog_novo_Item_eddescricao_hint">Descrição...</string>
    <string name="dialog_novo_Item_edquantidade_hint">Quantidade...</string>
    <string name="dialog_novo_Item_botao_add_texto">Adicionar</string>
    <string name="dialog_confirmar_compra_preco">Valor Total da Compra: R$</string>
    <string name="dialog_sobre_descricao">Este é um app que permite elaborar listas de compras, utilize-o para controlar seus gastos mensais no supermercado.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tela_principal_dialog_erro_buscar_dados_firebase_titulo">Erro!!!</string>
    <string name="tela_principal_dialog_erro_buscar_dados_firebase_menssagem">Não foi possível buscar os dados online</string>
    <string name="tela_principal_dialog_erro_buscar_dados_firebase_pos_btn_txt">Fechar</string>
    <string name="tela_principal_dialog_offline_titulo">Conecte-se!</string>
    <string name="tela_principal_dialog_offline_menssagem">Para uma melhor experiencia com o aplicativo recomendamos que se conecte à internet.</string>
    <string name="tela_principal_dialog_offline_pos_btn_txt">Fechar</string>
    <string name="tela_principal_dialog_anonimo_titulo">Você não está logado!</string>
    <string name="tela_principal_dialog_anonimo_menssagem">Para uma experiencia completa com o aplicativo recomendamos que efetue login na tela inicial, basta informar um endereço de email e uma senha, uma conta de usuario será criada automaticamente.</string>
    <string name="tela_principal_dialog_anonimo_pos_btn_txt">Fechar</string>
    <string name="tela_principal_dialog_lista_offline_titulo">Conecte-se!</string>
    <string name="tela_principal_dialog_lista_offline_menssagem">Parece que você está desconectado. Não é possível acessar as listas online, Para acessar você deve estar conectado à internet.</string>
    <string name="tela_principal_dialog_lista_offline_pos_btn_txt">Fechar</string>
    <string name="login_dialog_offline_titulo">Erro de conexão!</string>
    <string name="login_dialog_offline_menssagem">Uma conexão com a internet é necessária para efetuar login.</string>
    <string name="login_dialog_offline_pos_btn_txt">Fechar</string>
    <string name="RVListaComprasOnlineAdapter_toast_classificou_lista">Você classificou essa lista</string>
    <string name="RVListaComprasOnlineAdapter_toast_adicionou_lista">Adicionado às minhas listas</string>
    <string name="rvlistacomprasadapter_Add_novo_item_titulo">Adicione um Novo Item!</string>
    <string name="rvlistacomprasadapter_Add_novo_item_menssagem">Adicione um novo item a sua lista de compras.</string>
    <string name="rvlistacomprasadapter_campo_vazio_titulo">Erro, campo vazio!</string>
    <string name="rvlistacomprasadapter_campo_vazio_menssagem">Os campos nome e quantidades do item devem ser preenchidos para se adicionar um novo item!</string>
    <string name="rvlistacomprasadapter_campo_vazio_pos_btn_txt">OK</string>
    <string name="rvlistacomprasadapter_concluir_compra_titulo">Concluir Compra!</string>
    <string name="rvlistacomprasadapter_concluir_compra_menssagem">Selecione Concluir para finalizar a compra ou pausar para continuar depois.</string>
    <string name="rvlistacomprasadapter_confirmar_concluir_titulo">Tem certeza!</string>
    <string name="rvlistacomprasadapter_confirmar_concluir_menssagem">Nem todos os itens foram concluídos ou nem todos os itens tiveram os preços atribuídos. Deseja concluir a compra assim mesmo?</string>
    <string name="rvlistacomprasitensadapter_alterar_quantidade_titulo">Alterar Quantidade</string>
    <string name="rvlistacomprasitensadapter_alterar_quantidade_menssagem">Altere a quantidade de itens que deseja comprar.</string>
    <string name="dialog_concluir_compras_rb_concluir">Concluir Compra</string>
    <string name="dialog_concluir_compras_btn_confirmar">Confirmar</string>
    <string name="dialog_concluir_compras_rb_pausar">Pausar Compra</string>
    <string name="dialog__confirmar_concluir_btn_confirmar">Confirmar</string>
    <string name="dialog__confirmar_concluir_cancelar">Cancelar</string>
    <string name="dialog_editar_quantidade_ed_quantidade">Quantidade...</string>
    <string name="dialog_editar_quantidade_btn_concluir">Concluir</string>
    <string name="dialog_sobre_versao">Versão:</string>
    <string name="fragment_lista_btn_recarregar_pagina">Recarregar pagina</string>
    <string name="tela_principal_loading_toast">Carregando Informações</string>
    <string name="login_activity_tv_bem_vindo">Bem vindo(a) ao Empta!</string>
    <string name="login_activity_tvinfo_text">Você pode acessar o app fazendo login com um endereço de e-mail e uma senha ou entrar como um usuário anônimo. Se você não tiver uma conta cadastrada será criada uma conta automaticamente ao digitar o e-mail e a senha e clicar no botão entre ou registre-se. Ao entrar anonimamente algumas funcionalidades não estarão disponíveis.</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
</resources>