<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/imSobre"
        android:orderInCategory="110"
        android:title="@string/menu_item_sobre"
        app:showAsAction="never" />
    <item
        android:id="@+id/imLogOut"
        android:orderInCategory="199"
        android:title="@string/menu_item_logout"
        android:icon="@drawable/ic_logout"
        app:showAsAction="never" />
    <item
        android:id="@+id/imLogIn"
        android:orderInCategory="198"
        android:title="@string/menu_item_login"
        android:icon="@drawable/ic_login"
        app:showAsAction="ifRoom"
        app:iconTint="@color/branco"/>

    <item
        android:id="@+id/imSair"
        android:orderInCategory="200"
        android:title="@string/menu_item_sair"
        app:showAsAction="never" />

   <!-- <item
        android:id="@+id/imConfiguracoes"
        android:orderInCategory="100"
        android:title="@string/menu_item_configuracoes"
        app:showAsAction="never" />-->
</menu>