<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:orientation="vertical">

    <RadioGroup
        android:id="@+id/rg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/rbConcluir"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dialog_concluir_compras_rb_concluir" />

        <RadioButton
            android:id="@+id/rbContinuar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/dialog_concluir_compras_rb_pausar" />
    </RadioGroup>

    <Button
        android:id="@+id/btnConfirmar"
        style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_concluir_compras_btn_confirmar" />

</LinearLayout>