<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="5dp"
    android:orientation="vertical">

    <EditText
        android:id="@+id/edNome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:ems="10"
        android:hint="@string/dialog_add_lista_ednome_hint"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/edDescricao"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/dialog_add_lista_eddescricao_hint"
        android:inputType="textMultiLine"
        android:visibility="visible" />

    <Button
        android:id="@+id/btnAdd"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_add_lista_botao_criar_texto" />
</LinearLayout>