<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <AutoCompleteTextView
        android:id="@+id/acItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:dropDownHeight="220dp"
        android:ems="10"
        android:hint="@string/dialog_novo_Item_editem_hint"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/edDescricao"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:ems="10"
        android:hint="@string/dialog_add_lista_eddescricao_hint"
        android:inputType="textPersonName"
        android:visibility="gone" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/edQuantidade"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/dialog_novo_Item_edquantidade_hint"
            android:inputType="number|numberDecimal"
            android:text="1" />

        <Spinner
            android:id="@+id/spUnidade"
            style="@style/Widget.AppCompat.Spinner.DropDown"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:dropDownWidth="match_parent" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Spinner
            android:id="@+id/spCategoria"
            style="@android:style/Widget.DeviceDefault.Light.Spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_weight="1"
            android:dropDownWidth="match_parent" />

    </LinearLayout>

    <Button
        android:id="@+id/btnAddNovoItem"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_novo_Item_botao_add_texto" />

</LinearLayout>