<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:layout_marginTop="5dp"
    android:orientation="vertical">

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="?android:attr/listDivider" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imvCategoriaIcon"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginLeft="5dp"
            app:srcCompat="@drawable/ic_outros" />

        <TextView
            android:id="@+id/tvNome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_marginTop="1dp"
            android:layout_marginBottom="5dp"
            android:layout_weight="1"
            android:text="@string/rv_lista_de_compras_itens_cv_tv_nome"
            android:textColor="@color/common_google_signin_btn_text_dark_focused"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tvQuantidade"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="2"
            android:text="@string/rv_lista_de_compras_itens_cv_tv_quantidade"
            android:textColor="@color/common_google_signin_btn_text_dark_focused" />

        <ImageButton
            android:id="@+id/imbRemoverItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:srcCompat="@drawable/ic_sub_lista" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvCategoria"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:text="@string/rv_lista_de_compras_itens_cv_tv_categoria"
                android:textColor="@color/common_google_signin_btn_text_dark_focused"
                tools:visibility="gone" />

            <TextView
                android:id="@+id/tvDescricao"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="5dp"
                android:text="@string/rv_lista_de_compras_itens_cv_tv_descricao"
                android:textColor="@color/common_google_signin_btn_text_dark_focused"
                tools:visibility="gone" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <CheckBox
                android:id="@+id/cbConcluido"
                style="@android:style/Widget.DeviceDefault.CompoundButton.CheckBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="true"
                android:text="@string/rv_lista_de_compras_itens_cv_cb_concluido"
                android:visibility="gone" />

            <EditText
                android:id="@+id/editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/rv_lista_de_compras_itens_cv_tv_preco"
                android:inputType="textPersonName"
                android:textColor="@color/common_google_signin_btn_text_dark_focused"
                android:visibility="gone" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
